--- a/app/src/main/res/drawable/blue_outline.xml
+++ b/app/src/main/res/drawable/blue_outline.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
-    <stroke android:color="@color/title" android:width="1dp"/>
-    <corners android:radius="@dimen/_25sdp"/>
+    <stroke android:color="@color/title" android:width="1.5dp"/>
+    <corners android:radius="0dp"/>
 </shape>
