--- a/app/src/main/res/layout/activity_delete.xml
+++ b/app/src/main/res/layout/activity_delete.xml
@@ -1,114 +1,75 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:background="@drawable/back_register"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/cities"
+    android:orientation="vertical"
+    android:gravity="center"
     tools:context=".Admin.Delete">
-
-
-    <Button
-        android:id="@+id/BtnDelete"
-        android:layout_width="250dp"
-        android:layout_height="40dp"
-
-
-        android:layout_marginStart="80dp"
-        android:layout_marginTop="74dp"
-        android:layout_marginEnd="81dp"
-        android:background="@drawable/button_shape"
-        android:text="Delete"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/Mall_Delete" />
-
-    <EditText
-        android:id="@+id/Mall_Delete"
-        android:layout_width="305dp"
-        android:layout_height="37dp"
-        android:layout_marginHorizontal="20dp"
-
-        android:layout_marginStart="40dp"
-        android:layout_marginTop="424dp"
-        android:background="@drawable/custom_input"
-        android:drawableStart="@drawable/delete_tv"
-        android:drawablePadding="10dp"
-        android:ems="10"
-        android:hint=" Enter Mall  "
-        android:inputType="textPersonName"
-        android:minHeight="48dp"
-        android:paddingStart="12dp"
-        android:paddingEnd="12dp"
-        android:textAlignment="viewStart"
-        android:textColor="#143D59"
-        android:textColorHint="#143d59"
-        android:textSize="16sp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
     <TextView
-        android:id="@+id/textView6"
-        android:layout_width="332dp"
-        android:layout_height="52dp"
-        android:gravity="center"
-        android:hint="Select City "
-
-        android:text="Welcome Admin "
-        android:textColor="#FFFFFF"
-        android:textSize="30dp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.494"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.046" />
-
-    <TextView
-        android:id="@+id/textView8"
-        android:layout_width="328dp"
-        android:layout_height="68dp"
-        android:layout_marginStart="42dp"
-        android:layout_marginTop="37dp"
-        android:layout_marginEnd="42dp"
-        android:gravity="center"
-        android:text="Insert Mall Information for Delete "
-        android:textColor="#7C7D7E"
-        android:textSize="24sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView6" />
-
-    <Spinner
-        android:id="@+id/spinner2"
-        android:layout_width="277dp"
-        android:layout_height="35dp"
-        android:layout_marginStart="64dp"
-        android:layout_marginTop="232dp"
-        android:background="@drawable/custom_input"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <Spinner
-        android:id="@+id/spinner3"
-        android:layout_width="277dp"
-        android:layout_height="35dp"
-        android:layout_marginStart="64dp"
-        android:layout_marginTop="300dp"
-        android:background="@drawable/custom_input"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
-
-    <FrameLayout
-        android:layout_width="0dp"
-        android:layout_height="0dp"
-        app:layout_constraintBottom_toBottomOf="@+id/navigationView"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:layout_width="1dp"
+        android:layout_height="200dp"
+        android:layout_marginTop="0dp">
+    </TextView>
 
 
+
+
+    <androidx.cardview.widget.CardView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_margin="30dp"
+        app:cardCornerRadius="30dp"
+        app:cardElevation="20dp">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical"
+            android:layout_gravity="center_horizontal"
+            android:padding="25dp"
+            android:background="@drawable/custom_edittext">
+
+
+            <TextView
+                android:id="@+id/textView8"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:text="MALL Delete "
+                android:textColor="@color/title"
+                android:textSize="24sp"
+                android:textStyle="bold"/>
+
+            <Spinner
+                android:id="@+id/spinner2"
+                android:layout_width="200dp"
+                android:layout_height="35dp"
+                android:layout_gravity="center"
+                android:layout_marginTop="15dp"
+                android:background="@drawable/custom_input"
+                android:spinnerMode="dialog"/>
+            <Spinner
+                android:id="@+id/spinner3"
+                android:layout_width="200dp"
+                android:layout_height="35dp"
+                android:layout_gravity="center"
+                android:layout_marginTop="15dp"
+                android:background="@drawable/custom_input"
+                android:spinnerMode="dialog" />
+            <Button
+                android:id="@+id/BtnDelete"
+                android:layout_width="100dp"
+                android:layout_height="40dp"
+                android:layout_marginTop="20dp"
+                android:layout_gravity="center"
+                android:background="@drawable/button_shape"
+                android:text="Delete" />
+        </LinearLayout>
+
+    </androidx.cardview.widget.CardView>
     <com.google.android.material.bottomnavigation.BottomNavigationView
         android:id="@+id/navigationView"
         android:layout_width="match_parent"
@@ -120,6 +81,6 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:menu="@menu/menu_navigation" />
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+        app:menu="@menu/menu_navigation"
+        android:layout_marginTop="217dp"/>
+</LinearLayout>
