--- a/app/src/main/res/layout/activity_register.xml
+++ b/app/src/main/res/layout/activity_register.xml
@@ -8,14 +8,14 @@
     android:orientation="vertical"
     android:gravity="center"
     android:background="@drawable/back_register"
-    tools:context=".About">
+    tools:context=".Admin.register">
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="30dp"
         app:cardCornerRadius="30dp"
-        app:cardElevation="20dp">
+        app:cardElevation="25dp">
 
         <LinearLayout
             android:layout_width="match_parent"
