--- a/app/src/main/res/layout/activity_space.xml
+++ b/app/src/main/res/layout/activity_space.xml
@@ -5,10 +5,7 @@
     android:layout_width="match_parent"
     android:background="@drawable/cities"
     android:layout_height="match_parent"
-    tools:context=".SpaceActivity">
-
-
-
+    tools:context=".Admin.SpaceActivity">
 
     <androidx.cardview.widget.CardView
         android:layout_width="match_parent"
@@ -24,6 +21,19 @@
             android:layout_gravity="center_horizontal"
             android:padding="25dp"
             android:background="@drawable/custom_edittext">
+
+            <TextView
+                android:id="@+id/time_date"
+                android:layout_width="319dp"
+                android:layout_height="60dp"
+                android:layout_gravity="center"
+                android:layout_marginTop="10dp"
+                android:text="Time Date"
+                android:gravity="center"
+                android:textColor="@color/title"
+                android:textStyle="bold"
+                android:textSize="15dp" />
+
             <ImageView
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
@@ -33,19 +43,20 @@
 
 
             <TextView
-            android:id="@+id/textView7"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="30dp"
-                android:textSize="20dp"
+                android:id="@+id/textView7"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
                 android:layout_gravity="center"
-
-            android:text="Space park"
-             />
+                android:layout_marginTop="30dp"
+                android:text="Space park"
+                android:textColor="@color/title"
+                android:textSize="20dp"
+                android:textStyle="bold" />
 
             <Spinner
                 android:id="@+id/spinner2"
                 android:layout_width="190dp"
+                android:spinnerMode="dialog"
                 android:layout_height="35dp"
                 android:layout_marginTop="20dp"
                 android:layout_gravity="center"
@@ -59,25 +70,71 @@
                 android:layout_height="35dp"
                 android:layout_gravity="center"
                 android:layout_marginTop="20dp"
+                android:spinnerMode="dialog"
                 android:background="@drawable/custom_input"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
-            <TextView
-                android:id="@+id/textView4"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="20dp"
-                android:text="number of parkings: "
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+
 
             <TextView
                 android:id="@+id/numberpark"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
-                android:text="TextView"
+                android:text="Number of park :"
+                android:layout_gravity="center"
+                android:textColor="@color/title"
+                android:textStyle="bold"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:id="@+id/available_park"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="20dp"
+                android:text="Available park : "
+                android:layout_gravity="center"
+                android:textColor="@color/title"
+                android:textStyle="bold"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+
+
+
+            <Spinner
+                android:id="@+id/spinner4"
+                android:layout_width="100dp"
+                android:layout_height="35dp"
+                android:layout_marginLeft="20dp"
+                android:layout_marginTop="20dp"
+                android:background="@drawable/custom_input"
+                android:gravity="center"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+
+            <Spinner
+                android:id="@+id/spinner5"
+                android:layout_width="100dp"
+                android:layout_height="35dp"
+                android:layout_marginLeft="155dp"
+                android:layout_marginTop="-36dp"
+                android:gravity="center"
+                android:background="@drawable/custom_input"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <Button
+                android:id="@+id/Editspace"
+                android:layout_width="100dp"
+                android:layout_height="40dp"
+                android:layout_gravity="center"
+                android:layout_marginTop="20dp"
+                android:background="@drawable/button_shape"
+                android:text="Edit"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
@@ -85,19 +142,16 @@
         </LinearLayout>
     </androidx.cardview.widget.CardView>
 
-
-
-
-
-
-
     <FrameLayout
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:layout_constraintBottom_toBottomOf="@+id/navigationView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent" >
+
+
+    </FrameLayout>
 
 
     <com.google.android.material.bottomnavigation.BottomNavigationView
