--- a/app/src/main/res/layout/activity_start_user.xml
+++ b/app/src/main/res/layout/activity_start_user.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/background"
+    android:background="@drawable/back_register"
     tools:context=".User.startUser">
 
 
@@ -25,6 +25,7 @@
             android:id="@+id/carnumber"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:layout_gravity="center"
             android:drawableStart="@drawable/car_custom"
             android:drawablePadding="10dp"
             android:ems="10"
@@ -48,7 +49,7 @@
         android:layout_marginEnd="65dp"
         android:gravity="center"
         android:text="Welcom to ZonePark"
-        android:textColor="#FFFFFF"
+        android:textColor="@color/title"
         android:textSize="27dp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -61,8 +62,9 @@
         android:layout_width="248dp"
         android:layout_height="40dp"
         android:layout_marginStart="82dp"
-        android:layout_marginTop="474dp"
+        android:layout_marginTop="450dp"
         android:layout_marginEnd="82dp"
+        android:gravity="center"
         android:background="@drawable/button_shape"
         android:text="start"
         app:layout_constraintEnd_toEndOf="parent"
@@ -78,7 +80,7 @@
         android:layout_marginEnd="134dp"
         android:gravity="center"
         android:text="TermsPolicy"
-        android:textColor="#FFFFFF"
+        android:textColor="@color/title"
         android:textSize="18sp"
         android:textStyle="bold|italic"
         app:layout_constraintEnd_toEndOf="parent"
