--- a/app/src/main/res/drawable/bg_round.xml
+++ b/app/src/main/res/drawable/bg_round.xml
@@ -3,7 +3,7 @@
     android:shape="rectangle">
     <solid android:color="@color/white"/>
     <corners android:radius="25dp"/>
-    <stroke android:width="1sp" android:color="#FF43A047"/>
+    <stroke android:width="1sp" android:color="@color/title"/>
 
 
 </shape>
