--- a/app/src/main/res/drawable/bordermall.xml
+++ b/app/src/main/res/drawable/bordermall.xml
@@ -2,7 +2,7 @@
 <shape xmlns:android="http://schemas.android.com/apk/res/android">
 
 
-    <stroke android:width="2dp" android:color="@color/title"/>
+    <stroke android:width="2dp" android:color="#D2F3F3F3"/>
     <corners android:radius="3dp"/>
 
 
