--- a/app/src/main/res/layout/activity_mall_page.xml
+++ b/app/src/main/res/layout/activity_mall_page.xml
@@ -3,47 +3,50 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
+    android:background="@drawable/parking_mall_back"
     android:layout_height="match_parent"
-    android:background="@drawable/background_mall"
+
     tools:context=".User.Mall_page">
 
     <TextView
         android:id="@+id/mall"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="176dp"
-        android:layout_marginTop="60dp"
-        android:layout_marginEnd="177dp"
-        android:layout_marginBottom="652dp"
-        android:fontFamily="@font/chilanka"
+        android:layout_width="331dp"
+        android:layout_height="46dp"
         android:gravity="center"
-        android:text="TextView"
-        android:textSize="23dp"
+        android:text="Welcome to mall"
+        android:textColor="@color/white"
+        android:textSize="30dp"
         android:textStyle="bold"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.496"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.091" />
 
     <TextView
         android:id="@+id/back"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
+        android:layout_marginStart="20dp"
         android:layout_marginTop="28dp"
         android:background="@drawable/back_android"
         android:paddingStart="5dp"
+
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvmall"
-        android:layout_width="283dp"
-        android:layout_height="547dp"
+        android:layout_width="345dp"
+        android:layout_height="514dp"
+        android:paddingStart="17dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.492"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.913" />
+        app:layout_constraintVertical_bias="0.931" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
