--- a/app/src/main/res/layout/activity_park_space.xml
+++ b/app/src/main/res/layout/activity_park_space.xml
@@ -4,44 +4,49 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/park_spice_back"
+    android:background="@drawable/greenback"
     tools:context=".User.Park_space">
 
     <TextView
         android:id="@+id/back_to"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="10dp"
-        android:layout_marginTop="28dp"
+
         android:background="@drawable/back_android"
         android:paddingStart="5dp"
+        android:layout_marginStart="20dp"
+        android:layout_marginTop="28dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/recyclerViewspace"
-        android:layout_width="316dp"
-        android:layout_height="608dp"
+        android:layout_width="310dp"
+        android:layout_height="465dp"
         android:layout_marginStart="1dp"
         android:layout_marginTop="1dp"
         android:layout_marginEnd="1dp"
         android:layout_marginBottom="1dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.494"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.991" />
+        app:layout_constraintVertical_bias="1.0" />
 
     <TextView
         android:id="@+id/name_mall2"
-        android:layout_width="266dp"
-        android:layout_height="57dp"
-        android:layout_marginTop="40dp"
-        android:fontFamily="@font/chilanka"
+        android:layout_width="326dp"
+        android:layout_height="55dp"
+        android:layout_marginTop="68dp"
+        android:fontFamily="sans-serif"
         android:gravity="center"
-        android:text="park"
-        android:textSize="23sp"
+        android:text="park Name"
+        android:textColor="@color/white"
+        android:textSize="28dp"
+        android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.494"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
