--- a/app/src/main/res/layout/item.xml
+++ b/app/src/main/res/layout/item.xml
@@ -6,10 +6,9 @@
     android:layout_width="match_parent"
     android:layout_height="280dp"
     android:layout_marginTop="20dp"
-
     app:cardBackgroundColor="#FFFFFF"
-    app:cardCornerRadius="25dp"
-    app:cardElevation="10dp">
+    app:cardCornerRadius="5dp"
+    app:cardElevation="1dp">
 
 
     <LinearLayout
@@ -25,24 +24,21 @@
             app:cardBackgroundColor="#FFFFFF"
             android:layout_marginLeft="16dp"
             android:layout_marginTop="15dp"
-            app:cardCornerRadius="25dp"
-            android:background="@drawable/border2"
-            app:cardElevation="1dp">
+            app:cardCornerRadius="5dp"
+            app:cardElevation="2.5dp">
 
 
 
             <TextView
                 android:id="@+id/tvname"
-                android:layout_width="115dp"
-                android:layout_height="40dp"
-                android:layout_marginLeft="80dp"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
                 android:layout_marginTop="200dp"
-
                 android:fontFamily="@font/abril_fatface"
                 android:gravity="center"
                 android:text="City"
                 android:textAllCaps="true"
-                android:textColor="#43A047"
+                android:textColor="@color/title"
                 android:textSize="20dp" />
 
 
@@ -51,10 +47,9 @@
 
                 android:layout_width="250dp"
                 android:layout_height="190dp"
-
                 android:layout_marginTop="0dp"
                 android:scaleType="centerCrop"
-                app:cardCornerRadius="25dp"
+                app:cardCornerRadius="5dp"
 
                 tools:srcCompat="@tools:sample/avatars" />
         </androidx.cardview.widget.CardView>
