--- a/app/src/main/res/layout/item2.xml
+++ b/app/src/main/res/layout/item2.xml
@@ -5,44 +5,42 @@
 
     android:layout_width="140dp"
     android:layout_height="200dp"
-
     android:layout_marginTop="20dp"
-    android:layout_marginLeft="4dp"
+    android:layout_marginLeft="5dp"
+    android:layout_gravity="center"
     app:cardBackgroundColor="#FFFFFF"
-    app:cardCornerRadius="25dp"
-    app:cardElevation="10dp">
+    app:cardCornerRadius="5dp"
+    app:cardElevation="5dp">
 
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@drawable/border"
-        android:orientation="horizontal">
+        android:orientation="horizontal"
+      android:background="@drawable/bordermall">
 
         <androidx.cardview.widget.CardView
             android:layout_width="120dp"
             android:layout_height="160dp"
-            android:layout_marginLeft="7.5dp"
+            android:layout_marginLeft="7dp"
             android:layout_marginTop="10dp"
-            android:background="@drawable/border2"
+
             app:cardBackgroundColor="#FFFFFF"
-            app:cardCornerRadius="25dp"
-            app:cardElevation="1dp">
+            app:cardCornerRadius="5dp"
+            app:cardElevation="1dp"
+            >
 
             <TextView
                 android:id="@+id/name_mall"
-                android:layout_width="100dp"
-                android:layout_height="40dp"
-                android:layout_marginLeft="12dp"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
                 android:layout_marginTop="120dp"
-
                 android:fontFamily="@font/abril_fatface"
                 android:gravity="center"
                 android:text="Mall"
-
                 android:textAllCaps="true"
-                android:textColor="#43A047"
-                android:textSize="12dp" />
+                android:textColor="@color/title"
+                android:textSize="12dp"/>
 
             <ImageView
                 android:id="@+id/image2"
