--- a/app/src/main/res/layout/item_scan.xml
+++ b/app/src/main/res/layout/item_scan.xml
@@ -5,51 +5,62 @@
     android:id="@+id/bottom_sheet"
     android:layout_width="match_parent"
     android:layout_height="270dp"
-    android:background="#fff"
     android:orientation="vertical"
     android:paddingBottom="10dp"
     android:paddingLeft="10dp"
     android:paddingRight="10dp"
     app:behavior_hideable="true"
     app:behavior_peekHeight="56dp"
+    android:background="@drawable/border_scan"
+
+
     app:layout_behavior="android.support.design.widget.BottomSheetBehavior">
+
+    <TextView
+        android:layout_width="100dp"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_marginTop="0dp"
+        android:gravity="center"
+
+        android:background="@drawable/remove"
+        android:textColor="@color/black"
+        android:textSize="10dp"
+        android:textStyle="bold" />
 
 
     <TextView
         android:id="@+id/NumberSpace"
-
         android:layout_width="299dp"
-        android:layout_height="80dp"
+        android:layout_height="72dp"
         android:layout_gravity="center"
-        android:layout_marginTop="10dp"
+        android:layout_marginTop="0dp"
         android:gravity="center"
         android:text=" Number Park.."
         android:textColor="#43A047"
         android:textSize="20dp"
         android:textStyle="bold" />
 
-
     <TextView
         android:id="@+id/st"
         android:layout_width="304dp"
-        android:layout_height="73dp"
+        android:layout_height="50dp"
         android:layout_gravity="center"
-        android:layout_marginTop="5dp"
+        android:layout_marginTop="0dp"
         android:gravity="center"
-        android:textColor="#43A047"
         android:text="Status Park.."
-        android:textSize="20dp"
+        android:textColor="#43A047"
+        android:textSize="18dp"
         android:textStyle="bold" />
 
     <Button
         android:id="@+id/button"
-        android:layout_width="150dp"
+        android:layout_width="100dp"
         android:layout_height="80dp"
-        android:layout_marginLeft="105dp"
-
-        android:layout_marginTop="20dp"
+        android:layout_marginTop="0dp"
+        android:layout_gravity="center"
         android:background="@drawable/code_scanner"
-        android:textColor="@android:color/white"
+        android:textColor="#28975F"
         android:visibility="visible" />
 
 
