--- a/app/src/main/res/layout/activity_login_admin.xml
+++ b/app/src/main/res/layout/activity_login_admin.xml
@@ -62,15 +62,16 @@
 
 
             >
+
             <com.google.android.material.textfield.TextInputEditText
                 android:id="@+id/Email"
                 android:layout_width="270dp"
                 android:layout_height="45dp"
+                android:drawableStart="@drawable/custom_email_icon"
+                android:drawablePadding="10dp"
                 android:hint="Email"
                 android:inputType="textEmailAddress"
-                android:lines="1"
-                android:drawableStart="@drawable/custom_email_icon"
-                android:drawablePadding="10dp"/>
+                android:lines="1" />
         </com.google.android.material.textfield.TextInputLayout>
 
 
