--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -8,4 +8,11 @@
     <dimen name="login_layout_padding">8dp</dimen>
     <dimen name="login_layout_padding_top">36dp</dimen>
     <dimen name="login_button_margin">16dp</dimen>
+    <dimen name="activity_horizontal_margin2">16dp</dimen>
+    <dimen name="activity_vertical_margin2">150dp</dimen>
+    <dimen name="image_header_dimen2">150dp</dimen>
+    <dimen name="image_header_top_margin2">30dp</dimen>
+    <dimen name="login_layout_padding2">8dp</dimen>
+    <dimen name="login_layout_padding_top2">36dp</dimen>
+    <dimen name="login_button_margin2">16dp</dimen>
 </resources>
